# infermesh

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  Makefile  README.md
crates/mesh-adapter-gpu/: Cargo.toml
crates/mesh-adapter-gpu/src/: config.rs  dcgm.rs  discovery.rs  health.rs  lib.rs  metrics.rs  mock.rs  monitor.rs  nvml.rs  rocm.rs
crates/mesh-adapter-runtime/: Cargo.toml
crates/mesh-adapter-runtime/src/: adapter.rs  config.rs  health.rs  lib.rs  metrics.rs  process.rs  tgi.rs  triton.rs  vllm.rs
crates/mesh-agent/: Cargo.toml
crates/mesh-agent/src/: agent.rs  config.rs  lib.rs
crates/mesh-agent/src/services/: adapter_manager.rs  control_plane.rs  mod.rs  router_service.rs  scoring.rs  state_plane.rs  state_sync.rs
crates/mesh-cli/: Cargo.toml
crates/mesh-cli/src/: client.rs  config.rs  main.rs  output.rs
crates/mesh-cli/src/commands/: acl.rs  config.rs  events.rs  health.rs  mod.rs  models.rs  nodes.rs  quota.rs  stats.rs
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: config.rs  contracts.rs  error.rs  labels.rs  lib.rs  state.rs  traits.rs  types.rs
crates/mesh-dev/: Cargo.toml
crates/mesh-dev/src/: lib.rs  load_generator.rs  mock_adapters.rs  test_harness.rs  utils.rs
crates/mesh-gossip/: Cargo.toml
crates/mesh-gossip/src/: config.rs  lib.rs  membership.rs  message.rs  node.rs  protocol.rs  transport.rs
crates/mesh-metrics/: Cargo.toml
crates/mesh-metrics/src/: common.rs  endpoint.rs  lib.rs  opentelemetry_metrics.rs  prometheus_metrics.rs  registry.rs
crates/mesh-net/: Cargo.toml
crates/mesh-net/src/: agent_discovery.rs  config.rs  connection.rs  context.rs  discovery.rs  lib.rs  load_balancer.rs  pool.rs  tls.rs  utils.rs
crates/mesh-proto/: Cargo.toml  build.rs
crates/mesh-proto/proto/: control_plane.proto  scoring.proto  state_plane.proto
crates/mesh-proto/src/: conversions.rs  lib.rs
crates/mesh-raft/: Cargo.toml
crates/mesh-raft/src/: config.rs  lib.rs  node.rs  policy.rs  state_machine.rs  storage.rs
crates/mesh-router/: Cargo.toml
crates/mesh-router/src/: config.rs  handler.rs  lib.rs  proxy.rs  router.rs  server.rs
crates/mesh-sim/: Cargo.toml
crates/mesh-sim/src/: engine.rs  gpu.rs  lib.rs  main.rs  metrics.rs  net.rs  router.rs  runtime.rs  signals.rs  workload.rs  world.rs
crates/mesh-state/: Cargo.toml
crates/mesh-state/src/: config.rs  delta.rs  lib.rs  query.rs  scoring.rs  store.rs  sync.rs
docs/: APPLICATION_ARCHITECTURE_USER.md  ARCHITECTURE.md  CRATES.md  DASHBOARDS.md  DEVELOPMENT_ROADMAP.md  GETTING_STARTED.md  IMMEDIATE_ACTION_ITEMS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STRATEGY.md  RESULTS.md  SIMULATOR.md  TECHNICAL_IMPLEMENTATION_SPEC.md
