[package]
name = "mesh-sim"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Discrete-event simulator for InferMesh"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mesh-sim"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
clap = { workspace = true, features = ["derive"] }

# Random number generation and distributions
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Data structures
binary-heap-plus = "0.5"
smallvec.workspace = true
dashmap.workspace = true

# Metrics and histograms
hdrhistogram = "7.5"

# Async runtime (for potential future use)
tokio = { workspace = true, optional = true }

# Tracing and logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Math and statistics
statrs = "0.16"

# Parallel processing
rayon = "1.8"

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tempfile.workspace = true
